# pybot

./: .gitignore  LICENSE  README.md  build.bat  dependencies.bat  dependencies.txt  settings.json  setup.cfg
media/: logo.pdn
pybot/: main.py
pybot/core/: component.py  config.py  game.py  mouse.py  program.py  script.py  settings.py  tasks.py
pybot/util/: clazz.py  color.py  common.py  file.py  map.py  number.py  point.py  string.py  vector.py  win32.py  win32_screen.py
scripts/: attack1.py  auto_attack.py  test_script.py  unstuck.py  wine_maker_script.json  wine_maker_script.py
scripts/components/: break_component.py  keypress_component.py  mana_attack_component.py  mana_charge_component.py  mouse_click_component.py  mouse_move_component.py  pixel_click_component.py  test_component.py
scripts/programs/: runescape.py  toram.py
src/: components.py  config.py  game.py  main.py  mouse.py  script.py  settings.py  statemachine.py  tasks.py  torambot.py
src/util/: clazz.py  color.py  common.py  file.py  map.py  math.py  mouse.py  number.py  point.py  screen.py  string.py  vector.py  win32.py  win32_screen.py
