[metadata]
name = pybot
version = 1.0.0
description = PyBot is a scripting engine that provides a framework for building component based tasks with the following features: task dispatcher, component system, input controls, easy script configuration (via json), extendable script configuration, and more!
author = Ben Dol
author_email = dolb90@gmail.com
url = https://github.com/BenDol/pybot

[build-system]
requires = ["setuptools"]

[options]
python_requires = >= 3.10.1
packages = find:
install_requires =
  keyboard==0.13.5
  numpy==1.23.3
  Pillow==9.2.0
  pynput==1.7.6
  pypiwin32==223
  pywin32==304
  six==1.16.0
  pyinstaller==5.4.1
  screeninfo==0.8.1
  pywinauto==0.6.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
  pybot-cli = pybot.main:main
